[package]
name = "tradesatoshi-api"
version = "0.1.0"
description = "A Tradesatoshi.com API wrapper library in Rust"

[dependencies]
reqwest = "0.8.6"
hyper = "0.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
base64 = "0.9"
hmac = "0.6"
sha2 = "0.7"
url = "1.7"
query_params = "0.1"
strum = "0.10"
strum_macros = "0.10"
rand = "0.5"